# t_argchecksum

./: LICENSE  README.md  pyproject.toml
t_argchecksum/: t_argchecksum.py
