[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "t_argchecksum"
version = "1.0.0"
description = "Checksum that supports multiple arguments"
requires-python = ">=3.0"
license = {file = "LICENSE"}
readme = "README.md"

[tool.hatch.metadata]
allow-direct-references = true
